src/test/deca/syntax/valid/objet/ExemplePoly.deca

class Compteur {
    int x;
    void incr() {
        x = x + 1;
    }
}

{
    Compteur c = new Compteur();
    c.incr();
}
