src/test/deca/syntax/invalid/sansObjet/IfExpressionFalse0.deca
{
    int x=2;
    if (else){
        println("x=2");
    }
}